--- a/django-site/Dockerfile.front
+++ b/django-site/Dockerfile.front
@@ -1,1 +1,8 @@
 FROM python:latest
+ENV DJANGO_SETTINGS_MODULE=projet.public_settings
+WORKDIR /app
+COPY projet/public/requirements.txt /app/
+RUN pip install --no-cache-dir -r requirements.txt
+COPY projet /app/
+EXPOSE 8000
+CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
